test/expected/passthrough/2.alias.exposing/exposing/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: "2020-03-03T01:46:16Z"
  generation: 1
  labels:
    mesh: passthrough
  name: exposition-passthrough-helloworld-intermesh
  namespace: default
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceExposition
    name: helloworld
    uid: c5239f1d-5cf0-11ea-a10a-220468925d79
  resourceVersion: "70131443"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/destinationrules/exposition-passthrough-helloworld-intermesh
  uid: c54b47ae-5cf0-11ea-8107-aa3f405a4c17
spec:
  host: holamundo.default.svc.cluster.local
  subsets:
  - name: notls
    trafficPolicy:
      tls: {}
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
