test/expected/passthrough/2.alias.exposing/exposing/mfc.yaml
apiVersion: mm.ibm.istio.io/v1
kind: MeshFedConfig
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"mm.ibm.istio.io/v1","kind":"MeshFedConfig","metadata":{"annotations":{},"labels":{"fed-config":"passthrough","secret":"cluster2"},"name":"passthrough","namespace":"passthrough"},"spec":{"ingress_gateway_port":15443,"ingress_gateway_selector":{"istio":"ingressgateway"},"mode":"Passthrough","use_egress_gateway":false,"use_ingress_gateway":true}}
  creationTimestamp: "2020-03-03T01:42:43Z"
  finalizers:
  - mm.ibm.istio.io
  generation: 2
  labels:
    fed-config: passthrough
    secret: cluster2
  name: passthrough
  namespace: passthrough
  resourceVersion: "70131006"
  selfLink: /apis/mm.ibm.istio.io/v1/namespaces/passthrough/meshfedconfigs/passthrough
  uid: 467a352e-5cf0-11ea-b41a-ca67b6d79c4d
spec:
  ingress_gateway_port: 15443
  ingress_gateway_selector:
    istio: ingressgateway
  mode: Passthrough
  use_ingress_gateway: true
status: {}
